# FeatherFlap

./: .env  .gitignore  AGENTS.md  README.md  loggerneed.txt  pyproject.toml  test-output.xml
scripts/: README.md  _args.py  _paths.py  manage_usb_cameras.py  start_server.sh  stop_server.sh  test_aht20.py  test_environmental.py  test_i2c_bus.py  test_picamera.py  test_pir.py  test_rgb_led.py  test_ups.py  test_usb_camera.py  ups_monitor.py
src/featherflap/: __init__.py  __main__.py  config.py  logger.py
src/featherflap/hardware/: __init__.py  base.py  battery.py  camera.py  i2c.py  picamera.py  pir.py  power.py  registry.py  rgb_led.py  sensors.py  tests.py
src/featherflap/runtime/: __init__.py  camera.py  controller.py  mode.py  sleep.py
src/featherflap/server/: __init__.py  app.py  cli.py  routes.py
tests/: README.md  test_app.py  test_config_pir.py  test_dependencies.py  test_sleep_scheduler.py
