[project]
name = "featherflap"
version = "0.1.0"
description = "FeatherFlap – Smart bird house hardware test framework for Raspberry Pi Zero 2 W."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FeatherFlap Team" }
]
dependencies = [
    "fastapi>=0.111.0,<0.112.0",
    "uvicorn[standard]>=0.30.1,<0.31.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "typer>=0.12.3,<0.13.0"
]

[project.optional-dependencies]
hardware = [
    "RPi.GPIO>=0.7.1",
    "smbus2>=0.5.0",
    "opencv-python>=4.9.0.80",
    "picamera2"
]

[project.scripts]
featherflap = "featherflap.server.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
